--- a/about.html
+++ b/about.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - О нас</title>
@@ -33,14 +32,14 @@
 
 <div class="BLOCK PAGE_PADDING PADDING_T_2 PADDING_B_2">
   <div class="BLOCK_PART_3 MARGIN_A_05">
-    <div class="TEXT_BOLD TEXT_BIG MOVE_HEADER_T">О&nbsp;НАС</div>
+    <div class="TEXT_BOLD TEXT_BIG">О&nbsp;НАС</div>
     <div><img class="SMALL_IMAGE" src="Images/About/Romayor-313.png" alt="Romayor 313" title="Adast Romayor 313"></div>
     <div class="TEXT_GREEN TEXT_BOLD">КТО&nbsp;МЫ</div>
     <div class="TEXT_SMALL MARGIN_B_2">Открытое акционерное общество "Промпечать" это малое полиграфическое предприятие полного цикла.
       Мы работаем с 1997 года и имеем большой опыт полиграфического производства</div>
     </div>
     <div class="BLOCK_PART_3 MARGIN_A_05">
-    <div class="TEXT_BOLD TEXT_BIG MARGIN_B_2 MOVE_HEADER_T">ЧТО&nbsp;МЫ&nbsp;ПРЕДЛАГАЕМ</div>
+    <div class="TEXT_BOLD TEXT_BIG MARGIN_B_2">ЧТО&nbsp;МЫ&nbsp;ПРЕДЛАГАЕМ</div>
     <div class="FLEX_ROW">
       <div class="CIRCLE_SMALL TEXT_WHITE">01</div>
       <div class="FLEX_1">
@@ -75,7 +74,7 @@
     </div>
   </div>
   <div class="BLOCK_PART_3 MARGIN_A_05">
-    <div class="TEXT_BIG TEXT_BOLD MARGIN_B_1 MOVE_HEADER_T">НАША&nbsp;ЛИЦЕНЗИЯ</div>
+    <div class="TEXT_BIG TEXT_BOLD MARGIN_B_1">НАША&nbsp;ЛИЦЕНЗИЯ</div>
     <div><img class="SMALL_IMAGE" src="Images/About/publisher.jpeg" alt="Свидетельство издателя" title="Свидетельсво издателя"></div>
   </div>
 </div>
