--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Контакты</title>
@@ -31,12 +30,12 @@
     </div>
     <div class="BLOCK_HIDDEN_BIG"></div>
 
-    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD MOVE_HEADER_R">НАЙДИТЕ НАС:</div>
+    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD">НАЙДИТЕ НАС:</div>
     <div class="MAP">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2348.654164535314!2d27.610603226323494!3d53.93788770793404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf16490d0557%3A0x46ca70b07f438ecc!2z0YPQu9C40YbQsCDQp9C10YDQvdGP0YXQvtCy0YHQutC-0LPQviAzLCDQnNC40L3RgdC6!5e0!3m2!1sru!2sby!4v1588874322644!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
 
-    <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
+    <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.jpg')">
       <div class="BLOCK_PART_2 MARGIN_A_05">
         <div class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</div>
