--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Домашняя</title>
@@ -60,17 +59,17 @@
 
     <div class="BLOCK PAGE_PADDING TEXT_CENTER">
       <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
-        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">01</div>
+        <div class="CIRCLE TEXT_WHITE APPEARANCE">01</div>
         <div class="BLOCK_HEADING HIDDEN">Допечатная подготовка</div>
         <div class="BLOCK_DESCRIPTION HIDDEN">Подготовка макета, печатных форм и бумаги</div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
-        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">02</div>
+        <div class="CIRCLE TEXT_WHITE APPEARANCE">02</div>
         <div class="BLOCK_HEADING HIDDEN">Печать</div>
         <div class="BLOCK_DESCRIPTION HIDDEN">Печать на подготовленных листах бумаги офсетным способом</div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05 CONTENT_CENTER">
-        <div class="CIRCLE TEXT_WHITE APPEARANCE ANIMATION_DELAY_2">03</div>
+        <div class="CIRCLE TEXT_WHITE APPEARANCE">03</div>
         <div class="BLOCK_HEADING HIDDEN">Послепечатная обработка</div>
         <div class="BLOCK_DESCRIPTION HIDDEN">Работа по подрезке, фальцовке, склейке, сшивке тиража</div>
       </div>
@@ -91,19 +90,19 @@
       </div>
     </div>
     <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_2">
-      <div class="HIDDEN_DESKTOP"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+      <div class="HIDDEN_DESKTOP"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_CENTER MARGIN_A_05">
-        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
-    <div class="BACKGROUND_SMALL MOVE_HEADER_T ANIMATION_DELAY_1">
+    <div class="BACKGROUND_SMALL">
       <div class="BLOCK PAGE_PADDING TEXT_CENTER PADDING_B_5 MARGIN_B_2">
         <div class="CONTENT_IN_WIDTH PADDING_T_4 PADDING_B_4"></div>
         <div class="BLOCK_PART_3 TEXT_GOLD CONTENT_CENTER MARGIN_A_05">
@@ -142,18 +141,18 @@
 
     <div class="BLOCK PAGE_PADDING PADDING_B_2">
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
+        <div><a href="products.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_5 HIDDEN" title="Узнать больше">Больше</a></div>
+        <div class="HIDDEN"><a href="products.html" class="MORE TEXT_WHITE APPEARANCE HIDDEN" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
 
-    <div class="PAGE_PADDING BLOCK CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.png')">
+    <div class="PAGE_PADDING BLOCK CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.jpg')">
       <div class="BLOCK_PART_1 TEXT_CENTER MARGIN_A_05">
         <span class="BLOCK_HEADING">СВЯЗАТЬСЯ С НАМИ:</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</span>
