--- a/more.html
+++ b/more.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Узнать больше</title>
@@ -33,10 +32,10 @@
 
     <script src='JS/block_show-hide.js'></script>
 
-    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 MARGIN_B_2 TEXT_BOLD MOVE_HEADER_R">УЗНАТЬ БОЛЬШЕ</div>
+    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 MARGIN_B_2 TEXT_BOLD">УЗНАТЬ БОЛЬШЕ</div>
     <div class="PAGE_PADDING">
       <div class="BORDER_BOTTOM">
-        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R" onClick="toggle_hide('appear1')">Подготовка бумаги</div>
+        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER" onClick="toggle_hide('appear1')">Подготовка бумаги</div>
         <div id="appear1" class="MARGIN_B_1">После получения бумажные ролики транспортируюся на склад, где и хранятся на деревянных поддонах.
           Для работы с бумагой в роликах используется размоточная листорезальная машина ЛР, которая осуществляет размотку бумажного полотна
           одновременно с двух роликов шириной от 600 до 920 миллиметров. При размотке роликов имеется возможность изменять длину листов
@@ -46,7 +45,7 @@
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
-        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear2')">Допечатная подготовка</div>
+        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER" onClick="toggle_show('appear2')">Допечатная подготовка</div>
         <div class="DISPLAY_NONE MARGIN_B_1" id="appear2"><i>Допечатная подготовка</i> охватывает работу, проводимую непосредственно
           перед печатью. В процессе допечатной подготовки используется готовый макет заказчика либо проводится набор и верстка
           макета по содержимому,предоставляемому заказчиком.<br><br>
@@ -63,7 +62,7 @@
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
-        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear3')">Печать</div>
+        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER" onClick="toggle_show('appear3')">Печать</div>
         <div class="DISPLAY_NONE MARGIN_B_1" id="appear3">Процесс переноса краски на бумагу называется <i>печатью</i>. Наша типография использует
           разновидность плоского способа печати - офсетную печать. При плоской печати печатные и пробельные элементы
           располагаются в одной плоскости, но соответствуют различным материалам (например алюминий и полимерное покрытие)
@@ -80,7 +79,7 @@
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
-        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER MOVE_HEADER_R ANIMATION_DELAY_3" onClick="toggle_show('appear4')">Послепечатные процессы</div>
+        <div class="TEXT_BIG TEXT_BOLD MORE_HEADER MARGIN_B_1 CURSOR_POINTER" onClick="toggle_show('appear4')">Послепечатные процессы</div>
         <div class="DISPLAY_NONE MARGIN_B_1" id="appear4"><i>Послепечатная обработка</i> продукции охватывает стадии, которые проводятся после
           запечатывания бумаги. В нашей типографии осуществляются такие операции как резка, фальцовка, подборка листов и тетрадей,
           переплетные работы.<br><br>
