--- a/products.html
+++ b/products.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Продукция</title>
@@ -31,8 +30,8 @@
     </div>
     <div class="BLOCK_HIDDEN_BIG"></div>
 
-    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 MOVE_HEADER_R">НАША ПРОДУКЦИЯ</div>
-    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T" style="align-items: stretch">
+    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2">НАША ПРОДУКЦИЯ</div>
+    <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/journal.jpg" alt="Лечебное дело" title="Журнал"></div>
         <div class="PADDING_A_1">
@@ -40,7 +39,7 @@
           <div>Изготавливаем книги, журналы, справочники, каталоги способом офсетной печати в виде блоков из сшитых
             либо сшитых и склеенных между собой тетрадей</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/poster.jpg" alt="Афиша" title="Афиша"></div>
@@ -48,7 +47,7 @@
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Рекламная продукция</div>
           <div>Изготавливаем рекламные буклеты, афиши, листовки на полноцветных лазерных принтерах и многофункциональных устройствах либо офсетным способом печати</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
@@ -56,17 +55,17 @@
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Бланочная продукция и канцелярские журналы</div>
           <div>Изготавливаем гербовые бланки, путевые листы, журналы учета и регистрации, приходно-расходные книги</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_1" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
     </div>
-    <div class="BLOCK PAGE_PADDING MOVE_HEADER_T" style="align-items: stretch">
+    <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/certificate.jpeg" alt="Удостоверение" title="Удостоверение"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Удостоверения, визитки</div>
           <div>Изготавливаем удостоверения, бейджи и визитные карточки</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/diploma.jpg" alt="Грамота" title="Ганаровая грамата"></div>
@@ -74,7 +73,7 @@
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Поздравительная продукция</div>
           <div>Изготавливаем грамоты, папки поздравительного адреса, открытки</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Products/envelope.jpg" alt="Конверт Белагропромбанк" title="Конверт"></div>
@@ -82,7 +81,7 @@
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Конверты, папки, упаковка</div>
           <div>Печатаем на конвертах, изготавливаем упаковку, папки</div>
         </div>
-        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE ANIMATION_DELAY_3" title="Узнать больше">Больше</a></div>
+        <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
     </div>
 
