--- a/services.html
+++ b/services.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
-    <link rel="stylesheet" href="css/animation.css" type="text/css">
     <link rel="stylesheet" href="css/slider.css" type="text/css">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Промпечать - Услуги</title>
@@ -31,10 +30,10 @@
     </div>
     <div class="BLOCK_HIDDEN_BIG"></div>
 
-    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD MOVE_HEADER_R">НАШИ УСЛУГИ</div>
+    <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD">НАШИ УСЛУГИ</div>
     <div class="BLOCK PAGE_PADDING">
       <div class="BLOCK_PART_4 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/roll.png" alt="Ролик" title="Бумажный ролик"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/roll.jpg" alt="Ролик" title="Бумажный ролик"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Подготовка бумаги</div>
           <div>Подготовка бумаги заказчика к работе. Флатовка бумажных роликов, подрезка бумаги для тиража по необходимому размеру</div>
@@ -87,8 +86,8 @@
     </div>
 
 
-    <div class="PAGE_PADDING BLOCK_HEADING TEXT_BOLD PADDING_T_2  MOVE_HEADER_R ANIMATION_DELAY_3">ОБЗОР УСЛУГ</div>
-    <div class="BLOCK PAGE_PADDING BACKGROUND_LGRAY PADDING_T_2 MOVE_HEADER_T">
+    <div class="PAGE_PADDING BLOCK_HEADING TEXT_BOLD PADDING_T_2">ОБЗОР УСЛУГ</div>
+    <div class="BLOCK PAGE_PADDING BACKGROUND_LGRAY PADDING_T_2">
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="CONTENT_IN_WIDTH" src="Images/Services/12.jpeg" alt="Стопа бумаги" title="Стопа бумаги"></div>
         <div>
