--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 <div class="BLOCK PAGE_PADDING PADDING_T_2 PADDING_B_2">
   <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BOLD TEXT_BIG">О&nbsp;НАС</div>
-    <div><img class="SMALL_IMAGE" src="Images/About/Romayor-313.png" alt="Romayor 313" title="Adast Romayor 313"></div>
+    <div><img class="SMALL_IMAGE" src="images/about/romayor-313.png" alt="Romayor 313" title="Adast Romayor 313"></div>
     <div class="TEXT_GREEN TEXT_BOLD">КТО&nbsp;МЫ</div>
     <div class="TEXT_SMALL MARGIN_B_2">Открытое акционерное общество "Промпечать" это малое полиграфическое предприятие полного цикла.
       Мы работаем с 1997 года и имеем большой опыт полиграфического производства</div>
@@ -75,7 +75,7 @@
   </div>
   <div class="BLOCK_PART_3 MARGIN_A_05">
     <div class="TEXT_BIG TEXT_BOLD MARGIN_B_1">НАША&nbsp;ЛИЦЕНЗИЯ</div>
-    <div><img class="SMALL_IMAGE" src="Images/About/publisher.jpeg" alt="Свидетельство издателя" title="Свидетельсво издателя"></div>
+    <div><img class="SMALL_IMAGE" src="images/about/publisher.jpeg" alt="Свидетельство издателя" title="Свидетельсво издателя"></div>
   </div>
 </div>
 
