--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
       <div class="slider__wrapper">
         <div class="slider__items">
           <div class="slider__item">
-            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('Images/Home/7.jpeg'); background-size: cover"><span class="HIDDEN">Все виды полиграфических услуг</span></div>
+            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('images/Home/7.jpeg'); background-size: cover"><span class="HIDDEN">Все виды полиграфических услуг</span></div>
           </div>
           <div class="slider__item">
-            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('Images/Home/8.jpeg'); background-size: cover"><span class="HIDDEN">Профессиональный подход к работе</span></div>
+            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('images/Home/8.jpeg'); background-size: cover"><span class="HIDDEN">Профессиональный подход к работе</span></div>
           </div>
           <div class="slider__item">
-            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('Images/Home/14.jpeg'); background-size: cover"><span class="HIDDEN">Опытный персонал</span></div>
+            <div class="BACKGROUND_SLIDE TEXT_WHITE TEXT_CENTER TEXT_GIGANTIC TEXT_BOLD" style="background: url('images/Home/14.jpeg'); background-size: cover"><span class="HIDDEN">Опытный персонал</span></div>
           </div>
         </div>
       </div>
     </div>
-    <script src='JS/slider.js'></script>
+    <script src='js/slider.js'></script>
 
     <div class="FLEX_ROW BACKGROUND_DBLUE TEXT_WHITE PADDING_A_5_10_5_10">
       <div class="TEXT_BIGGEST TEXT_BOLD TEXT_GOLD FLEX_BASIS_30">ДОБРО ПОЖАЛОВАТЬ!</div>
@@ -123,17 +123,17 @@
     <div class="PAGE_PADDING BLOCK_HEADING TEXT_CENTER">НАША ПРОДУКЦИЯ</div>
     <div class="BLOCK PAGE_PADDING">
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="SMALL_IMAGE" src="Images/Home/Printer.jpg" alt="Принтер" title="МФУ для офиса"></div>
+        <div><img class="SMALL_IMAGE" src="images/home/printer.jpg" alt="Принтер" title="МФУ для офиса"></div>
         <div>Для офиса</div>
         <div>Печать на конвертах, изготовление визиток, бланков, открыток и плакатов, папок и удостоверений</div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="SMALL_IMAGE" src="Images/Home/print_machine.jpg" alt="Печатная машина" title="Полноцветаная печатная машина"></div>
+        <div><img class="SMALL_IMAGE" src="images/home/print_machine.jpg" alt="Печатная машина" title="Полноцветаная печатная машина"></div>
         <div>Полиграфия</div>
         <div>Печать фирменных бланков, изготовление брошюр, книжно-журнальной продукции</div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="SMALL_IMAGE" src="Images/Home/mini_cutter.png" alt="Листорез" title="Ручной листорезальный станок"></div>
+        <div><img class="SMALL_IMAGE" src="images/home/mini_cutter.png" alt="Листорез" title="Ручной листорезальный станок"></div>
         <div>Работа с бумагой</div>
         <div>Флатовка, резка и подрезка бумаги, заточка плоских ножей бумагорезальных машин</div>
       </div>
@@ -152,7 +152,7 @@
     </div>
 
 
-    <div class="PAGE_PADDING BLOCK CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.jpg')">
+    <div class="PAGE_PADDING BLOCK CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('images/carton.jpg')">
       <div class="BLOCK_PART_1 TEXT_CENTER MARGIN_A_05">
         <span class="BLOCK_HEADING">СВЯЗАТЬСЯ С НАМИ:</span>
         <span class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</span>
