--- a/more.html
+++ b/more.html
@@ -41,7 +41,7 @@
           одновременно с двух роликов шириной от 600 до 920 миллиметров. При размотке роликов имеется возможность изменять длину листов
           от 60 до 120 сантиметров. После размотки стопы листов подрезаются под необходимый печатный формат и перемещаются в печатный цех
           либо на склад для акклиматизации.<br>
-          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="Images/More/LR.jpeg" alt="Листорезальная машина" title="ЛР">
+          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="images/more/lr.jpeg" alt="Листорезальная машина" title="ЛР">
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
@@ -75,7 +75,7 @@
           в машину устанавливается бумага.<br><br>
           Непосредственно при печати происходит перенос изображения, сформированного предварительно раскатанной краской,
           под давлением с печатной формы на печатный лист через офсетный цилиндр.
-          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="Images/More/Dominant-745P.jpeg" alt="Печатная машины" title="Adast Dominant 745P">
+          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="images/more/dominant-745p.jpeg" alt="Печатная машины" title="Adast Dominant 745P">
         </div>
       </div>
       <div class="BORDER_BOTTOM MARGIN_T_1">
@@ -97,7 +97,7 @@
           <i>Клеевое скрепление и шитье проволокой.</i> Корешок подобранных тетрадей для клеевого скрепления брошюры сначала фрезеруется,
           чтобы облегчить проникновение клея. Затем корешок полностью обрабатывается клеем, большей частью расплавленным, накладывается обложка
           и приклеивается к корешку. После машины клеевого скрепления продукция отправляется на трехстороннюю резальную машину.
-          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="Images/More/11.jpeg" alt="Послепечатные процессы" title="Фальцевальный автомат">
+          <img class="CONTENT_IN_WIDTH CONTENT_CENTER" src="images/more/11.jpeg" alt="Послепечатные процессы" title="Фальцевальный автомат">
           </div>
       </div>
     </div>
