--- a/products.html
+++ b/products.html
@@ -33,7 +33,7 @@
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2">НАША ПРОДУКЦИЯ</div>
     <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/journal.jpg" alt="Лечебное дело" title="Журнал"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/journal.jpg" alt="Лечебное дело" title="Журнал"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Книги и журналы</div>
           <div>Изготавливаем книги, журналы, справочники, каталоги способом офсетной печати в виде блоков из сшитых
@@ -42,7 +42,7 @@
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/poster.jpg" alt="Афиша" title="Афиша"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/poster.jpg" alt="Афиша" title="Афиша"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Рекламная продукция</div>
           <div>Изготавливаем рекламные буклеты, афиши, листовки на полноцветных лазерных принтерах и многофункциональных устройствах либо офсетным способом печати</div>
@@ -50,7 +50,7 @@
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Бланочная продукция и канцелярские журналы</div>
           <div>Изготавливаем гербовые бланки, путевые листы, журналы учета и регистрации, приходно-расходные книги</div>
@@ -60,7 +60,7 @@
     </div>
     <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/certificate.jpeg" alt="Удостоверение" title="Удостоверение"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/certificate.jpeg" alt="Удостоверение" title="Удостоверение"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Удостоверения, визитки</div>
           <div>Изготавливаем удостоверения, бейджи и визитные карточки</div>
@@ -68,7 +68,7 @@
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/diploma.jpg" alt="Грамота" title="Ганаровая грамата"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/diploma.jpg" alt="Грамота" title="Ганаровая грамата"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Поздравительная продукция</div>
           <div>Изготавливаем грамоты, папки поздравительного адреса, открытки</div>
@@ -76,7 +76,7 @@
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
       <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Products/envelope.jpg" alt="Конверт Белагропромбанк" title="Конверт"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/products/envelope.jpg" alt="Конверт Белагропромбанк" title="Конверт"></div>
         <div class="PADDING_A_1" style="align-content: space-between">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Конверты, папки, упаковка</div>
           <div>Печатаем на конвертах, изготавливаем упаковку, папки</div>
