--- a/services.html
+++ b/services.html
@@ -33,28 +33,28 @@
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2 TEXT_BOLD">НАШИ УСЛУГИ</div>
     <div class="BLOCK PAGE_PADDING">
       <div class="BLOCK_PART_4 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/roll.jpg" alt="Ролик" title="Бумажный ролик"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/roll.jpg" alt="Ролик" title="Бумажный ролик"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Подготовка бумаги</div>
           <div>Подготовка бумаги заказчика к работе. Флатовка бумажных роликов, подрезка бумаги для тиража по необходимому размеру</div>
         </div>
       </div>
       <div class="BLOCK_PART_4 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Prepress.png" alt="Цветоделение" title="Цветоделение"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/prepress.png" alt="Цветоделение" title="Цветоделение"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Допечатная подготовка</div>
           <div>Верстка макета либо использование готового макета заказчика для цветоделения и подготовки печатных форм в работу</div>
         </div>
       </div>
       <div class="BLOCK_PART_4 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Dominant-745P.jpeg" alt="Печать" title="Печать"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/dominant-745p.jpeg" alt="Печать" title="Печать"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Печать</div>
           <div>Установка печатных форм, раскат краски, подготовка увлажнения и последующая печать с форм на подготовленную бумагу</div>
         </div>
       </div>
       <div class="BLOCK_PART_4 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Romayor-313.png" alt="Послепечатные процессы" title="Лакирование"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/romayor-313.png" alt="Послепечатные процессы" title="Лакирование"></div>
         <div class="TEXT_CENTER">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Послепечатные процессы</div>
           <div>Лакирование, фальцовка печатных листов в тетрадь либо тетради, подготовка блока издания, подрезка готовых блоков</div>
@@ -89,7 +89,7 @@
     <div class="PAGE_PADDING BLOCK_HEADING TEXT_BOLD PADDING_T_2">ОБЗОР УСЛУГ</div>
     <div class="BLOCK PAGE_PADDING BACKGROUND_LGRAY PADDING_T_2">
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/12.jpeg" alt="Стопа бумаги" title="Стопа бумаги"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/12.jpeg" alt="Стопа бумаги" title="Стопа бумаги"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Работа с бумагой</div>
           <div>
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/6.jpeg" alt="Подготовка машины" title="Подготовка к печати"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/6.jpeg" alt="Подготовка машины" title="Подготовка к печати"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Подготовка к печати</div>
           <div>
@@ -119,7 +119,7 @@
         </div>
       </div>
       <div class="BLOCK_PART_3 MARGIN_A_05">
-        <div><img class="CONTENT_IN_WIDTH" src="Images/Services/Postpress.jpg" alt="Postpress" title="Послепечатные процессы"></div>
+        <div><img class="CONTENT_IN_WIDTH" src="images/services/postpress.jpg" alt="Postpress" title="Послепечатные процессы"></div>
         <div>
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05 MARGIN_T_1 TEXT_CENTER">Печать и после печати</div>
           <div>
