--- a/contacts.html
+++ b/contacts.html
@@ -35,7 +35,7 @@
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2348.654164535314!2d27.610603226323494!3d53.93788770793404!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbcf16490d0557%3A0x46ca70b07f438ecc!2z0YPQu9C40YbQsCDQp9C10YDQvdGP0YXQvtCy0YHQutC-0LPQviAzLCDQnNC40L3RgdC6!5e0!3m2!1sru!2sby!4v1588874322644!5m2!1sru!2sby" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
 
-    <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('Images/carton.jpg')">
+    <div class="PAGE_PADDING FLEX_ROW FLEX_START CONTENT_CENTER PADDING_T_5 PADDING_B_5" style="background-image: url('images/carton.jpg')">
       <div class="BLOCK_PART_2 MARGIN_A_05">
         <div class="BLOCK_HEADING">СВЯЖИТЕСЬ С НАМИ:</div>
         <div class="TEXT_GIGANTIC TEXT_BOLD">+375 17 262 91 76</div>
@@ -59,7 +59,7 @@
       </div>
     </div>
 
-    <script src='JS/submit_form.js'></script>
+    <script src='js/submit_form.js'></script>
 
     <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2">
       <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
