--- a/index.html
+++ b/index.html
@@ -11,24 +11,7 @@
     <title>Промпечать - Домашняя</title>
   </head>
   <body>
-    <div class="BLOCK_FIXED">
-      <div class="UPPER_HEAD TEXT_WHITE"><a href="index.html" class="MENU_BUTTON">
-        <div>Открытое акционерное общество</div>
-        <div class="TEXT_GIGANTIC TEXT_BOLD">"ПРОМПЕЧАТЬ"</div>
-        <div>полиграфические услуги</div>
-      </a></div>
-      <div class="MENU TEXT_WHITE">
-      <ul>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG BUTTON_SELECTED"><a href="#" class="MENU_BUTTON" title="Текущая страница">ГЛАВНАЯ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="about.html" class="MENU_BUTTON" title="Узнать о нас">О НАС</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="products.html" class="MENU_BUTTON" title="Наша продукция">ПРОДУКЦИЯ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="services.html" class="MENU_BUTTON" title="Наши услуги">УСЛУГИ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="contacts.html" class="MENU_BUTTON" title="Связаться с нами">КОНТАКТЫ</a></li>
-      </ul>
-      </div>
-      <div class="BLOCK_HIDDEN_SMALL"></div>
-    </div>
-    <div class="BLOCK_HIDDEN_BIG"></div>
+    <script src="js/Header.js" type="text/javascript"></script>
 
     <div class="slider">
       <div class="slider__wrapper">
@@ -121,7 +104,7 @@
     </div>
 
     <div class="PAGE_PADDING BLOCK_HEADING TEXT_CENTER">НАША ПРОДУКЦИЯ</div>
-    <div class="BLOCK PAGE_PADDING">
+    <div class="BLOCK PAGE_PADDING TEXT_CENTER">
       <div class="BLOCK_PART_3 MARGIN_A_05">
         <div><img class="SMALL_IMAGE" src="images/home/printer.jpg" alt="Принтер" title="МФУ для офиса"></div>
         <div>Для офиса</div>
@@ -161,14 +144,7 @@
       </div>
     </div>
 
-    <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2">
-        <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
-        <span class="HIDDEN">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
-        <span class="MARGIN_B_1 HIDDEN">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
-        <span class="HIDDEN">Открытое акционерное общество "Промпечать"&nbsp;</span>
-        <span class="HIDDEN">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
-        <span class="HIDDEN">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
-        <span class="MARGIN_T_1">&copy;2020 Минск</span>
-    </div>
+    <script src="js/Footer.js" type="text/javascript"></script>
+
   </body>
 </html>
