--- a/products.html
+++ b/products.html
@@ -11,28 +11,11 @@
     <title>Промпечать - Продукция</title>
   </head>
   <body>
-    <div class="BLOCK_FIXED">
-      <div class="UPPER_HEAD TEXT_WHITE"><a href="index.html" class="MENU_BUTTON">
-        <div>Открытое акционерное общество</div>
-        <div class="TEXT_GIGANTIC TEXT_BOLD">"ПРОМПЕЧАТЬ"</div>
-        <div>полиграфические услуги</div>
-      </a></div>
-      <div class="MENU TEXT_WHITE">
-      <ul>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="index.html" class="MENU_BUTTON" title="Главная страница">ГЛАВНАЯ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="about.html" class="MENU_BUTTON" title="Узнать о нас">О НАС</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG BUTTON_SELECTED"><a href="#" class="MENU_BUTTON" title="Текущая страница">ПРОДУКЦИЯ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="services.html" class="MENU_BUTTON" title="Наши услуги">УСЛУГИ</a></li>
-        <li class="MENU_POINT TEXT_BOLD TEXT_BIG"><a href="contacts.html" class="MENU_BUTTON" title="Связаться с нами">КОНТАКТЫ</a></li>
-      </ul>
-      </div>
-      <div class="BLOCK_HIDDEN_SMALL"></div>
-    </div>
-    <div class="BLOCK_HIDDEN_BIG"></div>
+    <script src="js/Header.js" type="text/javascript"></script>
 
     <div class="PAGE_PADDING BLOCK_HEADING MARGIN_T_2">НАША ПРОДУКЦИЯ</div>
     <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/journal.jpg" alt="Лечебное дело" title="Журнал"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Книги и журналы</div>
@@ -41,7 +24,7 @@
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/poster.jpg" alt="Афиша" title="Афиша"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Рекламная продукция</div>
@@ -49,7 +32,7 @@
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/form.jpeg" alt="Коллективный авансовый отчет" title="Бланк"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Бланочная продукция и канцелярские журналы</div>
@@ -59,7 +42,7 @@
       </div>
     </div>
     <div class="BLOCK PAGE_PADDING" style="align-items: stretch">
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/certificate.jpeg" alt="Удостоверение" title="Удостоверение"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Удостоверения, визитки</div>
@@ -67,7 +50,7 @@
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/diploma.jpg" alt="Грамота" title="Ганаровая грамата"></div>
         <div class="PADDING_A_1">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Поздравительная продукция</div>
@@ -75,7 +58,7 @@
         </div>
         <div><a href="more.html" class="MORE TEXT_WHITE APPEARANCE" title="Узнать больше">Больше</a></div>
       </div>
-      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05">
+      <div class="BLOCK_PART_3 CONTENT_BETWEEN BACKGROUND_LGRAY MARGIN_A_05 PADDING_B_1 TEXT_CENTER">
         <div><img class="CONTENT_IN_WIDTH" src="images/products/envelope.jpg" alt="Конверт Белагропромбанк" title="Конверт"></div>
         <div class="PADDING_A_1" style="align-content: space-between">
           <div class="TEXT_GREEN TEXT_BOLD TEXT_BIG MARGIN_B_05">Конверты, папки, упаковка</div>
@@ -85,14 +68,6 @@
       </div>
     </div>
 
-    <div class="BLOCK_BOTTOM PAGE_PADDING CONTENT_CENTER TEXT_WHITE BACKGROUND_DBLUE PADDING_T_2 PADDING_B_2 MARGIN_T_2">
-      <span class="HIDDEN">Адкрытае акцыянернае таварыства "Прамдрук"&nbsp;</span>
-      <span class="HIDDEN">220049, г. Мiнск, вул. Чарняхоўскага, д. 3, УНП 100722731</span>
-      <span class="MARGIN_B_1 HIDDEN">р/р BY64 AKBB 3012 0146 3128 2530 0000, ЦБП 514 ААТ "ААБ Беларусбанк" г. Мiнск, вул. Сурганава, 47а, БIК AKBBBY2X, АКПВ 373137455000</span>
-      <span class="HIDDEN">Открытое акционерное общество "Промпечать"&nbsp;</span>
-      <span class="HIDDEN">220049, г. Минск, ул. Черняховскога, д. 3, УНП 100722731</span>
-      <span class="HIDDEN">р/сч BY64 AKBB 3012 0146 3128 2530 0000, ЦБУ 514 ОАО "АСБ Беларусбанк" г. Минск, ул. Сурганова, 47а, БИК AKBBBY2X, ОКПО 373137455000</span>
-      <span class="MARGIN_T_1">&copy;2020 Минск</span>
-    </div>
+    <script src="js/Footer.js" type="text/javascript"></script>
   </body>
 </html>
